[package]
name = "sql_db_rust"
version = "0.1.0"
authors = ["Durid Ahmad <ahmad.durid96@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"